# IntuitiveInterview

./: CMakeLists.txt  README.md  build.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
.build/fan_control/: Makefile  cmake_install.cmake  fan_controller  subsystem
.build/lib/: Makefile  cmake_install.cmake
.build/lib/IO/: Makefile  cmake_install.cmake
.build/lib/serialization/: Makefile  cmake_install.cmake
.build/lib/udp/: Makefile  cmake_install.cmake
.build/test_subsystem/: Makefile  cmake_install.cmake  fan_controller  subsystem
.build/tools/: Makefile  cmake_install.cmake
.build/tools/fan_config_reader/: Makefile  cmake_install.cmake
config/: fan_configuration.csv
fan_control/: CMakeLists.txt
fan_control/include/: fan_controller.hpp  fan_manager.hpp
fan_control/src/: fan_controller.cpp  fan_manager.cpp  main.cpp
lib/serialization/: CMakeLists.txt
lib/serialization/include/serialization/: serialization.hpp
lib/serialization/src/: serialization.cpp
test_subsystem/: CMakeLists.txt
test_subsystem/include/: subsystem.hpp
test_subsystem/src/: main.cpp  subsystem.cpp
tools/: CMakeLists.txt
tools/fan_config_reader/: CMakeLists.txt
tools/fan_config_reader/include/: fan_config_reader.hpp
tools/fan_config_reader/src/: fan_config_reader.cpp
